# breast-cancer-data-mining

./: .gitignore  README.md  filtered_dataset.csv  pyproject.toml
breastCancerDataMining/: main.py
breastCancerDataMining/DataLoading/: data_loader.py  visualizer.py
breastCancerDataMining/Models/: Models.py  discrete_filtered_dataset.csv  discretize_dataset.ows
breastCancerDataMining/Models/limeResults/: lime_0_0.html  lime_0_10.html  lime_0_101.html  lime_0_104.html  lime_0_105.html  lime_0_106.html  lime_0_108.html  lime_0_109.html  lime_0_111.html  lime_0_112.html  lime_0_114.html  lime_0_116.html  lime_0_117.html  lime_0_118.html  lime_0_12.html  lime_0_121.html  lime_0_122.html  lime_0_124.html  lime_0_127.html  lime_0_128.html  lime_0_132.html  lime_0_133.html  lime_0_134.html  lime_0_136.html  lime_0_137.html  lime_0_138.html  lime_0_14.html  lime_0_140.html  lime_0_142.html  lime_0_16.html  lime_0_17.html  lime_0_18.html  lime_0_21.html  lime_0_23.html  lime_0_24.html  lime_0_25.html  lime_0_26.html  lime_0_27.html  lime_0_28.html  lime_0_3.html  (+100 more)
breastCancerDataMining/SSDPplusResults/: contrasting_subgroups.txt  target_0.txt  target_1.txt
