[tool.poetry]
name = "breastCancerDataMining"
version = "0.1.0"
description = "Data mining assignment to Discover patterns on benign and malignant breast cancer"
authors = ["Nagi0 <brunolefonseca13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.18.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
ucimlrepo = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
